--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,11 @@
 
+/at/
+/circlePattern/
+/personalverwaltung/
+/generics/
+/BankGenerics/
+/GraphicsGeometrie/
+/interfaces/
+/HowToSort/
+/sort_with_Comparable/
+/BankTest/
