added stream, jdbc, database

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,17 @@
+/AWT_SWING_NIO/
+/BankCollection/
+/BankDateienUndStream/
+/BankGenerics/
+/BankTest/
 /Bank_DataBase_02/
+/GraphicsGeometric/
+/GraphicsGeometrie/
+/HowToSort/
+/InterfaceStaticGenerics_Zusatz/
+/ProjektAuto/
+/at/
+/bfi/
+/circlePattern/
+/generics/
+/interfaces/
+/personalverwaltung/
